--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <meta property="og:url"           content="https://ashgar.github.io/alias/" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="Alias game" />
+  <meta property="og:description"   content="You have just one minute to explain as many words as you can." />
+  <meta property="og:image"         content="https://ashgar.github.io/alias/alias.png" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   <title>Alias</title>
 </head>
 <style type="text/css">
   body {
-  font-size: 16px;
+  font-size: 20px;
   
   font-family: 'Oxygen', sans-serif;
 }
@@ -25,10 +37,13 @@
   .between {
     margin-bottom: 20px;
   }
+
+  .btn {
+    width: 100%;
+    font-size: 2em;
+  }
 </style>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
 
 <script type="text/javascript">
 $(document).ready(function() {
@@ -109,13 +124,22 @@ $(document).ready(function() {
 
 
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10&appId=173122439424229";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <div class="container-fluid">
-  <div class="row">
-    <div id="timer" style="text-align: center"></div>
+  <div class="row" style="margin-top: 1em;">
+    <div id="timer" style="text-align: center; font-size: 2em;"></div>
   </div>
   <div class="between"> </div>
   <div class="row">
-    <div id="word" class="col-xs-12"></div>
+    <div id="word" style="font-size: 3em; font-weight: bold; text-align: center;" class="col-xs-12"></div>
   </div>
   <div class="between"> </div>
   <div class="row">
@@ -123,18 +147,26 @@ $(document).ready(function() {
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-1"> </div>
+    <div class="col-xs-10">
       <button type="button" class="btn btn-primary" id="startGame">Start</button>
     </div>
+    <div class="col-xs-1"> </div>
   </div>
   <div class="between"> </div>
   <div class="row gameBtn">
-    <div class="col-xs-6">
+
+    <div class="col-xs-5">
       <button type="button" id="noBtn" class="btn btn-danger">No</button>
     </div>
-    <div class="col-xs-6"> 
+    <div class="col-xs-2"> </div>
+    <div class="col-xs-5"> 
       <button type="button" id="yesBtn" class="btn btn-success">Ok</button>
     </div>
+
+  </div>
+  <div class="row">
+  <div class="fb-share-button" data-href="https://ashgar.github.io/alias/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fashgar.github.io%2Falias%2F&amp;src=sdkpreparse">Share</a></div>
   </div>
 </div>
 
