--- a/marina.html
+++ b/marina.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:url"           content="https://ashgar.github.io/alias" />
+  <meta property="og:url"           content="https://ashgar.github.io/alias/marina.html" />
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Lear words" />
   <meta property="og:description"   content="It's time to learn those words." />
@@ -15,7 +15,7 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-  <title>Alias</title>
+  <title>Learn words</title>
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108461867-1"></script>
 <script>
@@ -62,86 +62,287 @@
         }
     }
 
-    data = [
-  {
-    "eng": "upbringing",
-    "ukr": "виховання",
-    "count": 1
-  },
-  {
-    "eng": "resilience",
-    "ukr": "стійкість",
-    "count": 1
-  },
-  {
-    "eng": "tatty",
-    "ukr": "жалюгідний, потрьопаний",
-    "count": 1
-  },
-  {
-    "eng": "sartorial",
-    "ukr": "кравець",
-    "count": 1
-  },
-  {
-    "eng": "mediocrity",
-    "ukr": "посередність",
-    "count": 1
-  },
-  {
-    "eng": "ruthlessness",
-    "ukr": "нещадність",
-    "count": 1
-  },
-  {
-    "eng": "jaded",
-    "ukr": "виснажений",
-    "count": 1
-  },
-  {
-    "eng": "notorious",
-    "ukr": "горезвісний",
-    "count": 1
-  },
-  {
-    "eng": "bland",
-    "ukr": "м'який, ввічливий",
-    "count": 1
-  },
-  {
-    "eng": "exposure",
-    "ukr": "ризик, незахищеність",
-    "count": 1
-  },
-  {
-    "eng": "savage",
-    "ukr": "дикун",
-    "count": 1
-  },
-  {
-    "eng": "backstage",
-    "ukr": "за кулісами",
-    "count": 1
-  },
-  {
-    "eng": "setback",
-    "ukr": "невдача, регрес",
-    "count": 1
-  },
-  {
-    "eng": "lucrative",
-    "ukr": "прибутковий, вигідний",
-    "count": 1
-  },
-  {
-    "eng": "viable",
-    "ukr": "життєздатний",
-    "count": 1
-  }
-]
+    data = [{
+  "eng": "upbringing",
+  "ukr": "виховання",
+  "type": "noun"
+}, {
+  "eng": "innate talent",
+  "ukr": "вроджений талант",
+  "type": "exp"
+}, {
+  "eng": "a lucky break",
+  "ukr": "удача",
+  "type": "exp"
+}, {
+  "eng": "to make use of sth",
+  "ukr": "використати",
+  "type": "verb"
+}, {
+  "eng": "to run dry (a source that never runs dry)",
+  "ukr": "бути виснаженим",
+  "type": "exp"
+}, {
+  "eng": "to stand out in a crowd",
+  "ukr": "виділятися в натовпі",
+  "type": "exp"
+}, {
+  "eng": "harsh reality",
+  "ukr": "сувора реальність",
+  "type": "exp"
+}, {
+  "eng": "tatty",
+  "ukr": "жалюгідний, потрьопаний",
+  "type": "adjv"
+}, {
+  "eng": "to backtrack (on your promise)",
+  "ukr": "відмовитися від",
+  "type": "verb"
+}, {
+  "eng": "resilience",
+  "ukr": "стійкість",
+  "type": "noun"
+}, {
+  "eng": "a prerequisite for sth",
+  "ukr": "передумова ",
+  "type": "noun"
+}, {
+  "eng": "sartorial",
+  "ukr": "кравець",
+  "type": "noun"
+}, {
+  "eng": "mediocrity",
+  "ukr": "посередність",
+  "type": "noun"
+}, {
+  "eng": "lousy",
+  "ukr": "божевільний",
+  "type": "adjv"
+}, {
+  "eng": "ruthlessness",
+  "ukr": "нещадність",
+  "type": "noun"
+}, {
+  "eng": "jaded",
+  "ukr": "виснажений",
+  "type": "adjv"
+}, {
+  "eng": "notorious",
+  "ukr": "горезвісний",
+  "type": "adjv"
+}, {
+  "eng": "precious little/few",
+  "ukr": "дуже мало",
+  "type": "adjv"
+}, {
+  "eng": "to receive a standing ovation",
+  "ukr": "отримати постійну овацію",
+  "type": "exp"
+}, {
+  "eng": "out of sync",
+  "ukr": "поза синхронізацією",
+  "type": "adjv"
+}, {
+  "eng": "bland",
+  "ukr": "м'який, вічливий",
+  "type": "adjv"
+}, {
+  "eng": "to outshine sb",
+  "ukr": "затьмарити",
+  "type": "verb"
+}, {
+  "eng": "to keep your head down",
+  "ukr": "розчарований, засмучений",
+  "type": "exp"
+}, {
+  "eng": "exposure",
+  "ukr": "ризик, незахищеність",
+  "type": "noun"
+}, {
+  "eng": "to crave sth",
+  "ukr": "жадати",
+  "type": "verb"
+}, {
+  "eng": "savage",
+  "ukr": "дикун",
+  "type": "noun"
+}, {
+  "eng": "catch-22",
+  "ukr": "тупик, запара",
+  "type": "exp"
+}, {
+  "eng": "backstage",
+  "ukr": "за лаштунками",
+  "type": "noun"
+}, {
+  "eng": "to lose patience with",
+  "ukr": "втратити терпіння",
+  "type": "exp"
+}, {
+  "eng": "setback",
+  "ukr": "невдача, регрес",
+  "type": "noun"
+}, {
+  "eng": "prerequisite for",
+  "ukr": "передумова для",
+  "type": "noun"
+}, {
+  "eng": "insistence on",
+  "ukr": "наполягати на",
+  "type": "verb"
+}, {
+  "eng": "thirst for",
+  "ukr": "жадати ",
+  "type": "verb"
+}, {
+  "eng": "to jump to conclusions",
+  "ukr": "перейти до висновків",
+  "type": "exp"
+}, {
+  "eng": "to jump down one’s throat",
+  "ukr": "заткнути рот",
+  "type": "exp"
+}, {
+  "eng": "by leaps and bounds",
+  "ukr": "стрімкими кроками",
+  "type": "exp"
+}, {
+  "eng": "of out bounds",
+  "ukr": "з-за меж",
+  "type": "exp"
+}, {
+  "eng": "to know no bounds",
+  "ukr": "не знати меж",
+  "type": "exp"
+}, {
+  "eng": "to hustle",
+  "ukr": "поспішати, підганяти",
+  "type": "verb"
+}, {
+  "eng": "understudy",
+  "ukr": "молодий актор, дубльор",
+  "type": "noun"
+}, {
+  "eng": "to underact",
+  "ukr": "не в повну силу",
+  "type": "exp"
+}, {
+  "eng": "playacting",
+  "ukr": "притворство",
+  "type": "noun"
+}, {
+  "eng": "dress rehearsal",
+  "ukr": "генеральна репетиція",
+  "type": "noun"
+}, {
+  "eng": "in the limelight",
+  "ukr": "в центрі уваги",
+  "type": "exp"
+}, {
+  "eng": "to suffer from stage fright",
+  "ukr": "жажда сцени",
+  "type": "exp"
+}, {
+  "eng": "financial constraints",
+  "ukr": "фінансові обмеження",
+  "type": "exp"
+}, {
+  "eng": "on cue",
+  "ukr": "вчасно",
+  "type": "adjv"
+}, {
+  "eng": "lyricist",
+  "ukr": "поет",
+  "type": "noun"
+}, {
+  "eng": "wait and see",
+  "ukr": "поживемо - побачимо",
+  "type": "exp"
+}, {
+  "eng": "anonymous - anonymity",
+  "ukr": "анонімно - анонімність",
+  "type": "exp"
+}, {
+  "eng": "emotional recall",
+  "ukr": "емоційний відклик",
+  "type": "exp"
+}, {
+  "eng": "a curtain call",
+  "ukr": "завіса",
+  "type": "noun"
+}, {
+  "eng": "to misinterpret",
+  "ukr": "неправильно тлумачити",
+  "type": "verb"
+}, {
+  "eng": "unprecedented",
+  "ukr": "безпрецедентний",
+  "type": "adjv"
+}, {
+  "eng": "?doodling?",
+  "ukr": "обдурювати",
+  "type": "verb"
+}, {
+  "eng": "to embrace",
+  "ukr": "обіймати, заохочувати",
+  "type": "verb"
+}, {
+  "eng": "to convey meaning",
+  "ukr": "передавати",
+  "type": "verb"
+}, {
+  "eng": "to exude (energy)",
+  "ukr": "виділяти, розповсюджувати",
+  "type": "verb"
+}, {
+  "eng": "imperfection",
+  "ukr": "недосконалість",
+  "type": "noun"
+}, {
+  "eng": "viable",
+  "ukr": "життєздатний",
+  "type": "adjv"
+}, {
+  "eng": "lucrative",
+  "ukr": "прибутковий",
+  "type": "adjv"
+}, {
+  "eng": "mainstream",
+  "ukr": "основна течія",
+  "type": "noun"
+}, {
+  "eng": "to push forward a common goal",
+  "ukr": "іти до спільної мети",
+  "type": "exp"
+}, {
+  "eng": "to become hooked",
+  "ukr": "стати залежним",
+  "type": "exp"
+}, {
+  "eng": "to cringe at",
+  "ukr": "плазувати, вислужуватися",
+  "type": "verb"
+}, {
+  "eng": "it adds to (the energy of drawing)",
+  "ukr": "сприяти",
+  "type": "verb"
+}, {
+  "eng": "slog away",
+  "ukr": "вкалувати, батрачити",
+  "type": "verb"
+}, {
+  "eng": "to relish",
+  "ukr": "насолоджуватися",
+  "type": "verb"
+}, {
+  "eng": "to bring your ideas to fruition",
+  "ukr": "щоб ваші ідеї досягли успіху",
+  "type": "exp"
+}]
   var type = 'eng-ukr';
   var game = Array()
   var current = 0
+  var types = ['exp', 'noun', 'verb', 'adjv']
 
     $('.ch-type').click(function(){
       var elem = $(this);
@@ -170,8 +371,11 @@
     function showWord() {
       var a = Array();
       $('.result').hide();
+      shuffleMy(types)
       for(var i=0; i<data.length; ++i) {
-        a.push(i);
+        if (data[i]['type'] == types[0]) {
+          a.push(i);
+        }
       }
       shuffleMy(a);
       game = Array()
@@ -189,10 +393,12 @@
     $('.choice').click(function(){
       $('.result.ok').hide()
       $('.result.no').hide()
-      val = game[parseInt($(this).attr('ind'))]
+      index = parseInt($(this).attr('ind'))
+      val = game[index]
       if (current == val) {
         $('.result.ok').show()
       } else {
+        gtag('event', 'fail-btn', {'event_label': data[index]['eng']})
         $('.result.no').show()
       }
     })
