--- a/marina.html
+++ b/marina.html
@@ -279,9 +279,9 @@
   "ukr": "безпрецедентний",
   "type": "adjv"
 }, {
-  "eng": "?doodling?",
-  "ukr": "обдурювати",
-  "type": "verb"
+  "eng": "doodling",
+  "ukr": "машинальное рисование",
+  "type": "noun"
 }, {
   "eng": "to embrace",
   "ukr": "обіймати, заохочувати",
