--- a/marina.html
+++ b/marina.html
@@ -63,285 +63,740 @@
     }
 
     data = [{
+  "level": "1a",
   "eng": "upbringing",
   "ukr": "виховання",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "innate talent",
   "ukr": "вроджений талант",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "a lucky break",
   "ukr": "удача",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "to make use of sth",
   "ukr": "використати",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "to run dry (a source that never runs dry)",
   "ukr": "бути виснаженим",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "to stand out in a crowd",
   "ukr": "виділятися в натовпі",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "harsh reality",
   "ukr": "сувора реальність",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "tatty",
   "ukr": "жалюгідний, потрьопаний",
   "type": "adjv"
 }, {
+  "level": "1a",
   "eng": "to backtrack (on your promise)",
   "ukr": "відмовитися від",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "resilience",
   "ukr": "стійкість",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "a prerequisite for sth",
   "ukr": "передумова ",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "sartorial",
   "ukr": "кравець",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "mediocrity",
   "ukr": "посередність",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "lousy",
   "ukr": "божевільний",
   "type": "adjv"
 }, {
+  "level": "1a",
   "eng": "ruthlessness",
   "ukr": "нещадність",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "jaded",
   "ukr": "виснажений",
   "type": "adjv"
 }, {
+  "level": "1a",
   "eng": "notorious",
   "ukr": "горезвісний",
   "type": "adjv"
 }, {
+  "level": "1a",
   "eng": "precious little/few",
   "ukr": "дуже мало",
   "type": "adjv"
 }, {
+  "level": "1a",
   "eng": "to receive a standing ovation",
   "ukr": "отримати постійну овацію",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "out of sync",
   "ukr": "поза синхронізацією",
   "type": "adjv"
 }, {
+  "level": "1a",
   "eng": "bland",
   "ukr": "м'який, вічливий",
   "type": "adjv"
 }, {
+  "level": "1a",
   "eng": "to outshine sb",
   "ukr": "затьмарити",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "to keep your head down",
   "ukr": "розчарований, засмучений",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "exposure",
   "ukr": "ризик, незахищеність",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "to crave sth",
   "ukr": "жадати",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "savage",
   "ukr": "дикун",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "catch-22",
   "ukr": "тупик, запара",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "backstage",
   "ukr": "за лаштунками",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "to lose patience with",
   "ukr": "втратити терпіння",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "setback",
   "ukr": "невдача, регрес",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "prerequisite for",
   "ukr": "передумова для",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "insistence on",
   "ukr": "наполягати на",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "thirst for",
   "ukr": "жадати ",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "to jump to conclusions",
   "ukr": "перейти до висновків",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "to jump down one’s throat",
   "ukr": "заткнути рот",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "by leaps and bounds",
   "ukr": "стрімкими кроками",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "of out bounds",
   "ukr": "з-за меж",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "to know no bounds",
   "ukr": "не знати меж",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "to hustle",
   "ukr": "поспішати, підганяти",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "understudy",
   "ukr": "молодий актор, дубльор",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "to underact",
   "ukr": "не в повну силу",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "playacting",
   "ukr": "притворство",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "dress rehearsal",
   "ukr": "генеральна репетиція",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "in the limelight",
   "ukr": "в центрі уваги",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "to suffer from stage fright",
   "ukr": "жажда сцени",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "financial constraints",
   "ukr": "фінансові обмеження",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "on cue",
   "ukr": "вчасно",
   "type": "adjv"
 }, {
+  "level": "1a",
   "eng": "lyricist",
   "ukr": "поет",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "wait and see",
   "ukr": "поживемо - побачимо",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "anonymous - anonymity",
   "ukr": "анонімно - анонімність",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "emotional recall",
   "ukr": "емоційний відклик",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "a curtain call",
   "ukr": "завіса",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "to misinterpret",
   "ukr": "неправильно тлумачити",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "unprecedented",
   "ukr": "безпрецедентний",
   "type": "adjv"
 }, {
+  "level": "1a",
   "eng": "doodling",
   "ukr": "машинальное рисование",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "to embrace",
   "ukr": "обіймати, заохочувати",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "to convey meaning",
   "ukr": "передавати",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "to exude (energy)",
   "ukr": "виділяти, розповсюджувати",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "imperfection",
   "ukr": "недосконалість",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "viable",
   "ukr": "життєздатний",
   "type": "adjv"
 }, {
+  "level": "1a",
   "eng": "lucrative",
   "ukr": "прибутковий",
   "type": "adjv"
 }, {
+  "level": "1a",
   "eng": "mainstream",
   "ukr": "основна течія",
   "type": "noun"
 }, {
+  "level": "1a",
   "eng": "to push forward a common goal",
   "ukr": "іти до спільної мети",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "to become hooked",
   "ukr": "стати залежним",
   "type": "exp"
 }, {
+  "level": "1a",
   "eng": "to cringe at",
   "ukr": "плазувати, вислужуватися",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "it adds to (the energy of drawing)",
   "ukr": "сприяти",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "slog away",
   "ukr": "вкалувати, батрачити",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "to relish",
   "ukr": "насолоджуватися",
   "type": "verb"
 }, {
+  "level": "1a",
   "eng": "to bring your ideas to fruition",
   "ukr": "щоб ваші ідеї досягли успіху",
   "type": "exp"
+}, {
+  "level": "1a",
+  "eng": "in sharp contrast with",
+  "ukr": "Сильный контраст с",
+  "type": "exp"
+}, {
+  "level": "1a",
+  "eng": "to leap at the chance/opportunity",
+  "ukr": "Ухватиться за шанс/возможность",
+  "type": "exp"
+}, {
+  "level": "1a",
+  "eng": "to jump for joy",
+  "ukr": "Прыгать от радости",
+  "type": "exp"
+}, {
+  "level": "1a",
+  "eng": "a leap in the dark",
+  "ukr": "Прыжок в неизвестность",
+  "type": "exp"
+}, {
+  "level": "1a",
+  "eng": "riveting performance",
+  "ukr": "Привлекающее внимание(захватывающее) выступление",
+  "type": "exp"
+}, {
+  "level": "1a",
+  "eng": "to get a thrill from",
+  "ukr": "Трепетать от",
+  "type": "exp"
+}, {
+  "level": "1a",
+  "eng": "it’s a gross exaggeration to suggest",
+  "ukr": "Большое преувеличение предлагать",
+  "type": "exp"
+},{
+  "eng": "to excel at",
+  "ukr": "be exceptionally good at or proficient in an activity or subject.",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to feel in need of",
+  "ukr": "to believe that you need to do something",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "like-minded",
+  "ukr": "having similar tastes or opinions",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to pass on expertise",
+  "ukr": "get skills/knowledge myself",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "hard-pressed for (ideas)",
+  "ukr": "closely pursued",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to counteract",
+  "ukr": "протидіяти",
+  "type": "verb",
+  "level": "1b"
+}, {
+  "eng": "inevitable",
+  "ukr": "неминучий",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "to tag along",
+  "ukr": "to follow along after someone; to go along with someone.",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to take to sth like a duck to water",
+  "ukr": "to discover when you start to do something for the first time that you have a natural ability to do it",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to hark back",
+  "ukr": "to get back",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "outgoing",
+  "ukr": "дружелюбний, відзивчивий",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "to take it on the next level",
+  "ukr": "загострювати, to escalate",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "passable",
+  "ukr": "задовільний, норм",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "hilarious",
+  "ukr": "веселий",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "to get your teeth into",
+  "ukr": "to deal with something with great energy and enthusiasm",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to stretch yourself",
+  "ukr": "to challenge",
+  "type": "verb",
+  "level": "1b"
+}, {
+  "eng": "to try things out",
+  "ukr": "спробувати щось нову",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to put sth on the line",
+  "ukr": "expose to a chance of loss or damage",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "deafening",
+  "ukr": "оглушительный",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "discordant",
+  "ukr": "суперечливий",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "harmonious",
+  "ukr": "гармонійний",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "mind-blowing",
+  "ukr": "шокуючий",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "rhythmic",
+  "ukr": "ритмічний",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "soothing",
+  "ukr": "заспокійливий",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "uplifting",
+  "ukr": "жизнеутверждающий",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "moving",
+  "ukr": "рухаючись",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "upbeat",
+  "ukr": "оптимістичний",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "have every/no intention of doing",
+  "ukr": "мати значний/не мати намір зробити",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to intend to do",
+  "ukr": "намірюватися зробити",
+  "type": "verb",
+  "level": "1b"
+}, {
+  "eng": "with intent on doing",
+  "ukr": "з наміром робити",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "she’s set to win",
+  "ukr": "вона налаштована на перемогу",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "be bound to do",
+  "ukr": "бути зобов'язаним зробити",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "be on the verge of/on the brink of doing",
+  "ukr": "бути на межі здійснення",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "there’s every/no/little/high likelihood of +ing/that ….",
+  "ukr": "там є мала/висока ймовірність того що ....",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "in all likelihood",
+  "ukr": "цілком ймовірно",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "with a view to doing",
+  "ukr": "з метою ",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "in view of",
+  "ukr": "з урахуванням",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "there’s no telling what/how",
+  "ukr": "не можливо сказати, не корисно",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to make a profit/profits",
+  "ukr": "отримувати прибуток",
+  "type": "verb",
+  "level": "1b"
+}, {
+  "eng": "in excess",
+  "ukr": "у надлишку",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "to line sb/sth up",
+  "ukr": "домовитися, організуватися",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to make a comeback",
+  "ukr": "відродитися, повернутися в гру",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "a debut performance",
+  "ukr": "дебютний спектакль",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "one-off (n, adj)",
+  "ukr": "одноразовий",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "one-off (n, adj)",
+  "ukr": "одноразова подія",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "generate interest",
+  "ukr": "генерувати ресурс",
+  "type": "verb",
+  "level": "1b"
+}, {
+  "eng": "a broad spectrum of",
+  "ukr": "широкий спектр",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "allure",
+  "ukr": "вабити, спокушати/шарм",
+  "type": "verb",
+  "level": ""
+}, {
+  "eng": "inherent in",
+  "ukr": "невід'ємний, вроджений",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "a communal experience",
+  "ukr": "колективний досвід",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to take control of/over",
+  "ukr": "взяти під контроль",
+  "type": "verb",
+  "level": "1b"
+}, {
+  "eng": "to gain recognition for",
+  "ukr": "отримати визнання за",
+  "type": "verb",
+  "level": "1b"
+}, {
+  "eng": "to name but a few",
+  "ukr": "цей список можна продовжувати/це лише мала частина",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to boast sth",
+  "ukr": "хвалитися ",
+  "type": "verb",
+  "level": "1b"
+}, {
+  "eng": "hands-on training",
+  "ukr": "практичний тренінг",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to gain a (thorough) grounding in",
+  "ukr": "отримати обгрунтування /  грунтуватися на",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "at the cutting edge of",
+  "ukr": "в авангарді/ передній край",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to embark on (a degree/career)",
+  "ukr": "розпочати ступінь/кар'єра",
+  "type": "verb",
+  "level": "1b"
+}, {
+  "eng": "to realize full potential",
+  "ukr": "реалізувати потенціал",
+  "type": "verb",
+  "level": "1b"
+}, {
+  "eng": "gripping",
+  "ukr": "захоплююча",
+  "type": "adjv",
+  "level": "1b"
+}, {
+  "eng": "to resonate with",
+  "ukr": "резонувати з",
+  "type": "verb",
+  "level": "1b"
+}, {
+  "eng": "to conform to sth (tradition/pattern)",
+  "ukr": "гармонійно поєднуватися",
+  "type": "verb",
+  "level": "1b"
+}, {
+  "eng": "to pull out all the stops",
+  "ukr": "to do everything you can to make something successful",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to blow your own trumpet",
+  "ukr": "talk boastfully about one's achievements.",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to ring a bell",
+  "ukr": "здаватися знайомим",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to go for a song",
+  "ukr": " To be sold for much less than the true value ",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "to change one’s tune",
+  "ukr": "запеть на другой лад",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "let yourself in for sth",
+  "ukr": "встрянути в щось",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "a new lease of life",
+  "ukr": "новий старт/друге життя",
+  "type": "exp",
+  "level": "1b"
+}, {
+  "eng": "throw in the towel",
+  "ukr": "визнати поразку",
+  "type": "exp",
+  "level": "1b"
 }]
   var type = 'eng-ukr';
   var game = Array()
   var current = 0
+  var level = '1a'
   var types = ['exp', 'noun', 'verb', 'adjv']
 
     $('.ch-type').click(function(){
@@ -349,6 +804,7 @@
       $('.ch-type').removeClass('selected')
       elem.addClass('selected');
       type = elem.attr('id');
+      gtag('event', 'type-change', {'type': type})
       showWord();
     })
 
@@ -373,7 +829,7 @@
       $('.result').hide();
       shuffleMy(types)
       for(var i=0; i<data.length; ++i) {
-        if (data[i]['type'] == types[0]) {
+        if (data[i]['type'] == types[0] && (data[i]['level'] == level || level == 'all')) {
           a.push(i);
         }
       }
@@ -404,6 +860,12 @@
       }
     })
 
+    $('#level').change(function(){
+      level = $('#level').val();
+      gtag('event', 'change-level', {'level': level})
+      showWord();
+    })
+
     $('.result').click(function(){
       showWord();
     }) 
@@ -417,7 +879,18 @@
   <div class="row">
     
     <div class="col-xs-4 ch-type" id="ukr-eng">UA to ENG</div>
-    <div class="col-xs-4"> </div>
+    <div class="col-xs-1"> </div>
+    <div class="col-xs-3">
+      <div class="form-group"> 
+        <select id="level">
+          <option value="1a">1a</option>
+          <option value="1b">1b</option>
+          <option value="all">all</option>
+        </select>
+      </div>
+      
+    </div>
+    <div class="col-xs-1"> </div>
     <div class="col-xs-4 ch-type selected" id="eng-ukr"> ENG to UA </div>
 
   </div>
