--- a/marina.html
+++ b/marina.html
@@ -174,6 +174,7 @@
         <select id="level">
           <option value="1a">1a</option>
           <option value="1b">1b</option>
+          <option value="2a">2a</option>
           <option value="all">all</option>
         </select>
       </div>
